demo.css
body {
    font-family: sans-serif;
    margin: 2em;
}

label.demo {
    display: inline-block;
    margin: 1em;
    vertical-align: top;
    width: 45%;
}

textarea.demo {
    display: block;
    margin: 0 2em 0 0;
    height: 200px;
    width: 100%;
    background-color: inherit;
    color: inherit;
}

input, select {
    background-color: inherit;
    color: inherit;
}

grid-chen {
    display: block;
    height: 200px;
}

/*grid-chen:hover {
    background-color: red;
}*/

@media (prefers-color-scheme: dark) {
    /* See https://gist.github.com/meskarune/2721790 for a template */
    :root {
        --a-link-color: rgb(255, 255, 16);     /* Inverse of rgb(0, 0, 238) */
        --a-visited-color: rgb(170, 229, 116); /* Inverse of rgb(85, 26, 139) */
    }

    /* For some reason, background-color cannot be inherited by option elements correctly in Chrome.
       So we set it explicitly. */
    body, option {
        background-color: rgb(10, 10, 10);
        color: rgb(250, 250, 250);
    }

    button {
        color: inherit;
        background-color: rgb(50, 50, 50);
    }

    a:link {
      color: var(--a-link-color);
    }

    a:visited {
      color: var(--a-visited-color);
    }

    ::-webkit-scrollbar {
        background-color: inherit;
        width: 15px;
    }

    ::-webkit-scrollbar-thumb {
        background: #444;
    }

    ::-webkit-scrollbar-corner {
        background: inherit;
    }
}

@media (prefers-color-scheme: light) {
    :root {
        --a-link-color: rgb(0, 0, 238);
        --a-visited-color: rgb(85, 26, 139);
    }

    body {
        background-color: rgb(250, 250, 250);
    }
}

